<resources>
    <string name="app_name">App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_detail_product">DetailProductActivity</string>
    <string name="large_text">Material is the metaphor</string>
    <string name="thongtintaikhoan">Info accounts</string>
    <string name="danhmucsanpham">Home</string>
    <string name="naptien">Recharge</string>
    <string name="donhang">Orders</string>
    <string name="quanlinguoidung">User management</string>
    <string name="dang_xuat">Log out</string>
    <string name="taikhoan">accounts</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="nick_name">Nick name</string>
    <string name="gi_i_thi_u">Introduce</string>
    <string name="chon">Set type</string>
    <string name="quatity">Quatity</string>
    <string name="add">ADD</string>
    <string name="decprition">Decprition</string>
    <string name="update">UpDate</string>
    <string name="money">Money</string>
    <string name="all_product">All Product</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="update_profille">Update profille</string>
    <string name="full_name">Full name</string>
    <string name="product_type">Product type</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="order_history">Order history</string>
    <string name="payment_history">Payment history</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buy">Buy</string>
    <string name="overview">Overview</string>
    <string name="pay_code">Pay code</string>
    <string name="seri_code">Seri code</string>
</resources>
