<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_signin"
    tools:context="com.example.vuphu.app.login_signUp.LoginActivity">

    <!-- Login progress -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="25sp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <EditText
                            android:id="@+id/edt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp">

                        <EditText
                            android:id="@+id/edt_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/cardView"
                            android:layout_alignParentStart="true"
                            android:hint="@string/password"
                            android:inputType="textPassword" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/btn_signin"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/btn_bg"
                        android:elevation="8dp"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/signin"
                        android:textColor="@android:color/white"
                        android:translationZ="8dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/btn_bg"
            android:elevation="8dp"
            android:fontFamily="sans-serif-light"

            android:onClick="signUp"
            android:text="@string/signup"
            android:textColor="@android:color/white"
            android:translationZ="8dp" />
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
