<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEFF1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_admin_add_product"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:src="@drawable/mypham" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/btn_admin_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="8dp"
                android:src="@drawable/ic_mode_edit_black_24dp"
                android:tint="@android:color/white"
                app:fabSize="mini" />
        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_admin_add_name_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:hint="Product name"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_type"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:text="@string/chon"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spinner_add_type_product"
                        android:layout_width="30dp"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_admin_add_product_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:hint="@string/price"
                        android:inputType="numberDecimal"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/edt_admin_add_quantity_product"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:hint="@string/quatity"
                        android:inputType="numberDecimal"
                        android:textColor="@android:color/black"
                        android:textSize="20sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/edt_admin_add_product_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="sans-serif"
                        android:hint="@string/gi_i_thi_u"
                        android:lines="4"
                        android:textAlignment="textStart"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_admin_add_product"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:background="@drawable/btn_bg"
                    android:elevation="8dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/add"
                    android:textColor="@android:color/white"
                    android:translationZ="8dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>